# rough

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_cartesia_german_tts.py
batch_llm/: __init__.py  __main__.py  compare.py
examples/: simple_compare.py
